--- a/kickoff/config.toml
+++ b/kickoff/config.toml
@@ -9,11 +9,11 @@ font_size = 25.0
 decrease_interval = 48
 
 [colors]
-background = '#03045E80'
-prompt = '#0077B6'
-text = '#0096C7'
-text_query = '#0096C7'
-text_selected = '#CAF0F8'
+background = '#212529CC'
+prompt = '#ADB5BD'
+text = '#6C757D'
+text_query = '#ADB5BD'
+text_selected = '#F8F9FA'
 
 [keybindings]
 # keybindings syntax: ctrl/shift/alt/logo as modifiers and a key joined by '+' signs
