--- a/waybar/config
+++ b/waybar/config
@@ -6,7 +6,7 @@
     "spacing": 4,
     "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
     "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "battery", "clock", "tray"],
+    "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "keyboard-state", "battery", "clock", "tray"],
     "sway/window": {
         "max-length": 60
     },
@@ -70,5 +70,12 @@
         "format-disconnected": "󰌙",
         "format-alt": "{ifname}: {ipaddr}/{cidr}",
         "on-click-right": "alacritty -e nmtui"
+    },
+    "idle_inhibitor": {
+        "format": "{icon}",
+        "format-icons": {
+            "activated": "",
+            "deactivated": ""
+        }
     }
 }
