--- a/sway/config
+++ b/sway/config
@@ -22,7 +22,9 @@ for_window [title="Picture-in-Picture"] floating enable, sticky on
 font pango:SourceCodePro Medium 8
 
 #### Gaps
-gaps inner 15
+gaps inner 10
+# No gaps with only one window open
+smart_gaps on
 
 #### Border
 # Disables title bars
