--- a/sway/config
+++ b/sway/config
@@ -55,11 +55,10 @@ input type:touchpad {
 }
 
 #### Idle + lock
-# 10 min screen sleep
-# 3600 min lockscreen
+# 15 min screen sleep
+# never lockscreen
 exec swayidle -w \
-    timeout 1800 'swaylock -f -c 000000' \
-    timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+    timeout 900 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
 
 ### Random wallapaper on start
