--- a/waybar/config
+++ b/waybar/config
@@ -6,7 +6,7 @@
     "spacing": 4,
     "modules-left": ["sway/workspaces", "sway/mode", "sway/window"],
     "modules-center": [""],
-    "modules-right": ["idle_inhibitor", "pulseaudio", "bluetooth", "network", "cpu", "memory", "temperature", "backlight", "battery", "clock", "tray"],
+    "modules-right": ["idle_inhibitor", "pulseaudio", "network", "cpu", "memory", "temperature", "backlight", "battery", "clock", "tray"],
     "sway/window": {
         "max-length": 60
     },
@@ -38,13 +38,6 @@
             "default": ["󰕿", "󰖀", "󰕾"]
         },
         "on-click": "pavucontrol"
-    },
-    "bluetooth": {
-        "format": "",
-        "on-click-left": "bluetoothctl power on",
-        "format-connected": " {num_connections}",
-        "tooltip-format-connected": "{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_battery_percentage}%\t{device_address}"
     },
     "memory": {
         "format": "󰍛{used:0.1f}G",
