--- a/sway/config
+++ b/sway/config
@@ -53,6 +53,8 @@ exec swayidle -w \
     timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
     before-sleep 'swaylock -f -c 000000'
 
+exec wlsunset -l 60.192059 -L 24.945831 -t 3500 -T 6500
+
 ### Random wallapaper on start
 set $wallpaper_cmd find $HOME/wallpapers -type f | shuf -n 1
 output * bg `$wallpaper_cmd` fill
