--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -14,13 +14,13 @@ scrolling:
 
 font:
   normal:
-    family: Source Code Pro
+    family: FiraCode Nerd Font
     style: Regular
   bold:
-    family: Source Code Pro
+    family: FiraCode Nerd Font
     style: Bold
   italic:
-    family: Source Code Pro
+    family: FiraCode Nerd Font
     style: Regular
   size: 11.0
   builtin_box_drawing: true
