--- a/waybar/config
+++ b/waybar/config
@@ -12,7 +12,7 @@
         "sway/window"
     ],
     "modules-right": [
-        "idle_inhibitor",
+        "custom/audio_idle_inhibitor",
         "pulseaudio",
         "bluetooth",
         "network",
@@ -95,6 +95,18 @@
         "format-icons": {
             "activated": "",
             "deactivated": ""
+        }
+    },
+    "custom/audio_idle_inhibitor": {
+        "format": "{icon}",
+        "exec": "sway-audio-idle-inhibit --dry-print-both-waybar",
+        "exec-if": "which sway-audio-idle-inhibit",
+        "return-type": "json",
+        "format-icons": {
+            "output": "",
+            "input": "",
+            "output-input": "  ",
+            "none": ""
         }
     }
 }
