--- a/sway/config
+++ b/sway/config
@@ -5,6 +5,9 @@ set $down j
 set $up k
 set $right l
 
+# Do not turn screen off when playing audio
+exec sway-audio-idle-inhibit
+
 #### Backlight controls (https://www.reddit.com/r/swaywm/comments/fk08lu/comment/fkvhvkn/?utm_source=share&utm_medium=web2x&context=3)
 # User must have no-password sudo permissions to the light command
 bindsym --locked XF86MonBrightnessUp exec light -T 1.4
