--- a/waybar/config
+++ b/waybar/config
@@ -12,6 +12,8 @@
         "sway/window"
     ],
     "modules-right": [
+        "custom/output_headphones",
+        "custom/output_tv",
         "idle_inhibitor",
         "pulseaudio",
         "network",
@@ -63,5 +65,13 @@
             "activated": "",
             "deactivated": ""
         }
+    },
+    "custom/output_headphones": {
+        "format": "IN",
+        "on-click": "pactl set-default-sink alsa_output.pci-0000_00_1f.3.analog-stereo"
+    },
+    "custom/output_tv": {
+        "format": "TV",
+        "on-click": "pactl set-default-sink alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2"
     }
 }
